--- a/src/app/views/g-user/g-user.component.html
+++ b/src/app/views/g-user/g-user.component.html
@@ -45,7 +45,7 @@
                   <td>{{ usuario.telefono }}</td>
                   <td>{{ usuario.email }}</td>
                   <td>
-                    <button type="button" class="btn btn-danger btn-sm btn-gradient-eliminar" (click)="deleteUser(usuario.id)">
+                    <button type="button" class="btn btn-danger btn-sm btn-gradient-eliminar">
                       <i class="fas fa-trash-alt"></i> Eliminar
                     </button>
                   </td>
