Entrega Final SOA

--- a/src/app/views/main/main.component.html
+++ b/src/app/views/main/main.component.html
@@ -14,29 +14,29 @@
             </div>
             <div class="box">
               <h4>+44 Destinos</h4>
-              <p>Más de 5 millones de pasajeros transportados en 2022</p>
+              <p>Te llevamos a tu destino preferido</p>
             </div>
             <div class="box">
               <h4>+56 Unidades</h4>
-              <p>Más de 5 millones de pasajeros transportados en 2022</p>
+              <p>Amplia flota de aviones bien equipados para tu confort</p>
             </div>
           </div>
         </div>
       </div>
 
       <div class="carousel-item">
-        <img src="../../../assets/belice.jpg" class="d-block w-100 img-carousel" alt="Belice">
+        <img src="../../../assets/cusco.webp" class="d-block w-100 img-carousel" alt="Belice">
         <div class="carousel-caption d-none d-md-block">
-          <h1>Bienvenido a Belice</h1>
-          <p>Descubre las maravillas naturales de Belice este verano</p>
+          <h1>Bienvenido a Cusco</h1>
+          <p>Descubre las maravillas naturales de Cusco este invierno</p>
         </div>
       </div>
 
       <div class="carousel-item">
-        <img src="../../../assets/jumbo-jet-volando-cielo.jpg" class="d-block w-100 img-carousel" alt="Otra Imagen">
+        <img src="../../../assets/costa.png" class="d-block w-100 img-carousel" alt="Otra Imagen">
         <div class="carousel-caption d-none d-md-block">
-          <h1>Otra Diapositiva</h1>
-          <p>Texto de ejemplo para otra diapositiva</p>
+          <h1>Disfruta de lugares increíbles</h1>
+          <p>Confía tu seguridad con nosotros</p>
         </div>
       </div>
     </div>
