--- a/src/app/views/g-header/g-header.component.html
+++ b/src/app/views/g-header/g-header.component.html
@@ -1,23 +1,30 @@
 <header>
-    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: white">
-      <div class="container">
-        <!-- Logo -->
-        <a class="navbar-brand" href="g-admin">
-          <img src="assets/Logo.png" alt="Logo" width="100">
-        </a>
-        <!-- Botón de hamburguesa para dispositivos móviles -->
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <!-- Menú de navegación -->
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav ms-auto">
-            <li class="nav-item">
-              <a class="nav-link" routerLink="/g-admin" routerLinkActive="active">Inicio</a>
-            </li>
-          </ul>
-        </div>
+  <nav class="navbar navbar-expand-lg navbar-light" style="background-color: white">
+    <div class="container">
+
+      <a class="navbar-brand" routerLink="/g-admin">
+        <img src="assets/Logo.png" alt="Logo" width="100">
+      </a>
+
+
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item">
+            <ng-container *ngIf="isLoggedIn; else loggedOut">
+              <a class="nav-link" (click)="logout()">Cerrar Sesión</a>
+            </ng-container>
+            <ng-template #loggedOut>
+              <a class="nav-link" routerLink="/login">Iniciar Sesión</a>
+            </ng-template>
+          </li>
+        </ul>
       </div>
-    </nav>
-  </header>
-  
+    </div>
+  </nav>
+</header>
