--- a/src/app/views/header/header.component.html
+++ b/src/app/views/header/header.component.html
@@ -1,28 +1,35 @@
-<header style="background-color: #10004f; /* Fondo de header */">
+<header style="background-color: #10004f;">
   <nav class="navbar navbar-expand-lg navbar-light" style="background-color: transparent;">
     <div class="container">
-      <!-- Logo -->
       <a class="navbar-brand" href="#">
         <img src="assets/Logo-Photoroom.png" alt="Logo" width="100">
       </a>
-      <!-- Boton Para dispositivos móviles -->
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <!-- Menú de navegación -->
+
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item">
             <a class="nav-link" routerLink="/main" routerLinkActive="active" style="color: #dfdee7;">Inicio</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" routerLink="/hospedaje" routerLinkActive="active" style="color: #dfdee7;">Hospedaje</a>
+            <a class="nav-link" routerLink="/hospedaje" routerLinkActive="active"
+              style="color: #dfdee7;">Hospedaje</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" routerLink="/vuelos" routerLinkActive="active" style="color: #dfdee7;">Vuelos</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" routerLink="/login" routerLinkActive="active" style="color: #dfdee7;">Iniciar Sesión</a>
+            <ng-container *ngIf="isLoggedIn; else loggedOut">
+              <a class="nav-link" (click)="logout()" style="color: #dfdee7;">Cerrar Sesión</a>
+            </ng-container>
+            <ng-template #loggedOut>
+              <a class="nav-link" routerLink="/login" routerLinkActive="active"
+                style="color: #dfdee7;">Iniciar Sesión</a>
+            </ng-template>
           </li>
         </ul>
       </div>
